# gb_lessons

./: .gitignore  1.txt  2.txt  3.txt  4.txt  Kitty.txt  arpresult.txt  cross_zero.cpp  cross_zeros.cpp  datasizes.txt  lsn_1.pkt  mult_files_compile_option  primer.txt  readme.txt  заметки по компиляции  заметки по массивам
Bash/: bashcommands.txt
C++_basics/: challenges.txt  square.cpp
C++_basics/common/: карточки срр.docx.pages  карточки срр.pages
C++_basics/lesson_1/: cpp_урок2_основные понятия.docx
C++_basics/lesson_2/: Lesson_2.cpp
C++_basics/lesson_3/: lsn3_main.cpp
C++_basics/lesson_4/: lsn4.cpp  primcheck
C++_basics/lesson_5/: CMakeLists.txt  lsn5.cpp
C++_basics/lesson_6/: CMakeLists.txt  lsn6.cpp  task5.txt  task_5.cpp
C++_basics/lesson_7/: CMakeLists.txt  mylib.cpp
C++_basics/lesson_8/: CMakeLists.txt  linux lesson 8.pages  main.cpp
C++_basics/my_mistakes/: ошибка_в_for.txt
Computer_Networks/lesson_1/: kalintsev_task_2.pkt
Computer_Networks/lesson_2/: task_2.pkt
Computer_Networks/lesson_3/: lsn_3.pkt
Computer_Networks/lesson_4/: lsn_4.pkt
Computer_Networks/lesson_5/: task_2.1.pkt
Computer_Networks/lesson_6/: task_1.txt  task_2.txt  task_3.txt
Git/: Git-help.pages  Git_manual.pages  git_commands.txt  readme.md
OOP/Dachi_case/: CMakeLists.txt  Game.cpp  Game.h  Quests.cpp  Quests.h  main.cpp
OOP/lesson_1/: CMakeLists.txt  main.cpp
OOP/lesson_2/: CMakeLists.txt  main.cpp  task_3.txt
OOP/lesson_3/: CMakeLists.txt  main.cpp
OOP/lesson_4/: CMakeLists.txt  arrayint.h  main.cpp
OOP/lesson_5/: BlackJack.h  CMakeLists.txt  main.cpp
OOP/lesson_6/: BlackJack.h  CMakeLists.txt  main.cpp
OOP/lesson_7/: BlackJack.h  CMakeLists.txt  main.cpp
OOP/lesson_7/модульный блэкджек/: BlackJack.cpp  BlackJack.h  CMakeLists.txt  game.cpp
OOP/lesson_8/: CMakeLists.txt  main.cpp
Tough_cpp/: Readme.md
Tough_cpp/lesson_1/: CMakeLists.txt  main.cpp
Tough_cpp/lesson_2/: CMakeLists.txt  main.cpp  timer.h
Tough_cpp/lesson_3/: CMakeLists.txt  main.cpp
Tough_cpp/lesson_4/: CMakeLists.txt  main.cpp
Tough_cpp/lesson_5/: CMakeLists.txt  main.cpp
Tough_cpp/lesson_6/: CMakeLists.txt  main.cpp
Tough_cpp/lesson_7/: CMakeLists.txt  car.pb.cc  car.pb.h  car.proto  main.cpp
additional_docs/: UE4_course.txt  cpp_рок 3_ Операции и выражения.docx  cross_zero.cpp  git_notes.txt  types_notes.txt  заметки по компиляции  заметки по массивам  сортировка_выбором.txt
algorithms/lesson_10/: main.cpp
algorithms/lesson_12/: main.cpp
algorithms/lesson_13/: main.cpp
algorithms/lesson_15/: main.cpp
algorithms/lesson_16/: main.cpp  test
algorithms/lesson_2/: lsn_1_1.c  lsn_2_1.c
algorithms/lesson_3/: lsn_3.c  main.c
algorithms/lesson_4/: main.c
algorithms/lesson_6/: CMakeLists.txt  main.cpp  mylib.cpp
algorithms/lesson_7/: CMakeLists.txt  main.cpp  mylib.cpp
algorithms/lesson_9/: main.cpp
lesson_1/: main.cpp
lesson_2/: cross_zeros.cpp
lesson_3/: .gitignore  CMakeLists.txt  argu.cpp  lsn3_main.cpp  lsn3_mod.cpp
lesson_4/: lsn4.cpp
lesson_5/: lsn5.cpp
lesson_6/: lsn6.cpp  task_5.cpp
lesson_7/: main.cpp  mylib.h
lesson_8/: main.cpp
linux_basics/lesson_2/: text.txt
linux_basics/lesson_4/: konspekt.txt
linux_basics/lesson_5/: konspekt.txt
network_cpp/lsn_1/: CMakeLists.txt  main.cpp
network_cpp/lsn_1/l1/: CMakeLists.txt
network_cpp/lsn_1/l1/udp_server/: main.cpp
network_cpp/lsn_2/pcappp_sniffer/: CMakeLists.txt  Layer_Inspector.h  main.cpp  raw_example.cpp  sniffer.h
network_cpp/lsn_3/: TCP_server.cpp  main.cpp
network_cpp/lsn_3/tcp_client/: CMakeLists.txt  TCP_client.cpp  error_codes.txt  (+1 more)
network_cpp/lsn_4/: readme.md
network_cpp/lsn_4/boost_server/: CMakeLists.txt  main.cpp  server.cpp
network_cpp/lsn_4/boost_server/src/: connection.cpp  connection.h  interface.cpp  interface.h  server.cpp  server.h  server_interface.cpp  server_interface.h
network_cpp/lsn_5/: readme.md
network_cpp/lsn_5/boost_client/: CMakeLists.txt  main.cpp
network_cpp/lsn_5/boost_client/src/: Client.cpp  Client.h  Connection.cpp  Connection.h  common.h
network_cpp/lsn_8/: warning.md
patterns/lesson_1/: CMakeLists.txt  main.cpp
qt_desktop/: readme.md  todo.txt
qt_desktop/lsn_01/: mainwindow.cpp  mainwindow.ui  readme.md
qt_desktop/lsn_02/: lesson_2.pro  readme.md  textparser.cpp
qt_desktop/lsn_03/: mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
qt_desktop/lsn_04/: mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
qt_desktop/lsn_05/: lesson_4.pro  mainwindow.h  mytexteditor.h  readme.md
qt_desktop/lsn_06/: MyNotePad.pro
qt_desktop/lsn_1/: Makefile  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  readme.md  ui_mainwindow.h
qt_desktop/lsn_11/: readme.md
qt_desktop/lsn_2/: mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  textparser.h
qt_desktop/lsn_3/: mail_ru_html.txt  readme.md
qt_desktop/lsn_4/: readme.md
qt_desktop/lsn_5/: mainwindow.cpp  mytexteditor.cpp  readme.md
qt_desktop/lsn_6/: mainwindow.cpp  mainwindow.h  prefMenu.h  prefmenu.cpp  readme.md
qt_desktop/lsn_7/: readme.md
temp/: CMakeLists.txt  IDEa copy.txt  func.cpp  primer.txt  test.cpp
программирование микроконтроллеров/: ControllerProgrammingWebinar.txt
(+183 files in other folders)
